# src/handlers/almacenar.ts
@@ -3,17 +3,17 @@ import { z, ZodError } from "zod";
 import { DynamoDBClient, PutItemCommand } from "@aws-sdk/client-dynamodb";
 import { marshall } from "@aws-sdk/util-dynamodb";
 import { verifyToken } from "../utils/auth";
+import { getCoordinates } from "../services/geoService";
+import { getWeatherByLatLon } from "../services/weatherService";
 
 const TABLE_NAME = process.env.DYNAMO_TABLE!;
 const client = new DynamoDBClient({});
 
 const bodySchema = z.object({
-  id: z
-    .string({
-      required_error: 'Field "id" is required',
-      invalid_type_error: 'Field "id" must be a string',
-    })
-    .min(1, 'Field "id" is required'),
+  id: z.string().min(1, 'El campo "id" es obligatorio'),
+  planetName: z.string(),
+  climate: z.string(),
+  population: z.string().optional(),
 });
 
 export const handler: APIGatewayProxyHandler = async (event) => {
@@ -29,16 +29,28 @@ export const handler: APIGatewayProxyHandler = async (event) => {
     if (!event.body) {
       return {
         statusCode: 400,
-        body: JSON.stringify({ error: "No body provided" }),
+        body: JSON.stringify({
+          error: "No se proporcionó cuerpo en la petición",
+        }),
       };
     }
 
     const data = JSON.parse(event.body);
     const parsed = bodySchema.parse(data);
 
+    // Obtener coordenadas del planeta para consultar clima
+    const coords = await getCoordinates(parsed.planetName);
+
+    // Si no hay coords, fallback a (0,0)
+    const weather = coords
+      ? await getWeatherByLatLon(coords.lat, coords.lon)
+      : await getWeatherByLatLon("0", "0");
+
     const itemToStore = {
       ...parsed,
+      weather,
       timestamp: Date.now(),
+      source: "manual", // ✅ Esto previene la expiración automática
     };
 
     const command = new PutItemCommand({
@@ -51,7 +63,7 @@ export const handler: APIGatewayProxyHandler = async (event) => {
     return {
       statusCode: 201,
       body: JSON.stringify({
-        message: "Item stored successfully",
+        message: "Planeta almacenado correctamente",
         item: itemToStore,
       }),
     };
@@ -67,7 +79,7 @@ export const handler: APIGatewayProxyHandler = async (event) => {
     return {
       statusCode: 400,
       body: JSON.stringify({
-        error: error.message || "Error in sent data",
+        error: error.message || "Error en los datos enviados",
       }),
     };
   }
